# OxDEX

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/oxdex-auctioneer/: Cargo.toml
crates/oxdex-auctioneer/src/: lib.rs
crates/oxdex-config/: Cargo.toml
crates/oxdex-config/src/: lib.rs
crates/oxdex-intent-pool/: Cargo.toml
crates/oxdex-intent-pool/src/: app.rs  errors.rs  handlers.rs  lib.rs
crates/oxdex-jito-client/: Cargo.toml
crates/oxdex-jito-client/src/: lib.rs
crates/oxdex-matching/: Cargo.toml
crates/oxdex-matching/benches/: matching_bench.rs
crates/oxdex-matching/src/: lib.rs
crates/oxdex-node/: Cargo.toml
crates/oxdex-node/src/: main.rs
crates/oxdex-node/tests/: end_to_end.rs
crates/oxdex-solver/: Cargo.toml
crates/oxdex-solver/src/: lib.rs
crates/oxdex-storage/: Cargo.toml
crates/oxdex-storage/migrations/: 20260101000000_init.sql
crates/oxdex-storage/src/: lib.rs  memory.rs  postgres.rs  repository.rs
crates/oxdex-types/: Cargo.toml
crates/oxdex-types/src/: address.rs  batch.rs  error.rs  lib.rs  order.rs  price.rs  solution.rs
postman/: OxDEX.postman_collection.json
programs/oxdex-settlement/: Cargo.toml  README.md
programs/oxdex-settlement/src/: lib.rs
