[workspace]
resolver = "2"
members = [
    "crates/oxdex-types",
    "crates/oxdex-config",
    "crates/oxdex-storage",
    "crates/oxdex-matching",
    "crates/oxdex-solver",
    "crates/oxdex-auctioneer",
    "crates/oxdex-jito-client",
    "crates/oxdex-intent-pool",
    "crates/oxdex-node",
]
exclude = ["programs/oxdex-settlement", "target"]
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
authors = ["OxDEX Contributors"]
repository = "https://github.com/your-org/OxDEX"
[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
actix-web = "4.8"
actix-rt = "2.10"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
hex = "0.4"
bs58 = "0.5"
base64 = "0.22"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-actix-web = "0.7"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
config = "0.14"
dotenvy = "0.15"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
rayon = "1.10"
dashmap = "6"
rust_decimal = { version = "1.35", features = ["serde-with-float"] }
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.5"
mockall = "0.12"
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
panic = "abort"
strip = "symbols"
[profile.bench]
opt-level = 3
lto = "thin"
