[package]
name = "oxdex-jito-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pluggable bundle-submission client (stubbed Jito interface)."

[dependencies]
oxdex-types = { path = "../oxdex-types" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }

