[package]
name = "oxdex-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistence layer (PostgreSQL via SQLx) and Repository trait."

[dependencies]
oxdex-types = { path = "../oxdex-types" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

