[package]
name = "oxdex-settlement"
version = "0.1.0"
description = "On-chain Anchor settlement program for OxDEX (scaffold)."
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "oxdex_settlement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30"

